2009-04-23 Xerxes Rånby <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/sharkBuilder.cpp
	(SharkBuilder::init_external_functions): Use memory address to
	kernel helper __kernel_dmb on arm for memory barrier.
	* ports/hotspot/src/os_cpu/linux_zero/vm/orderAccess_linux_zero.inline.hpp
	(__kernel_dmb_t): New type.
	(__kernel_dmb): New macro.
	(FULL_MEM_BARRIER): New macro that uses __kernel_dmb on arm
	and __sync_synchronize on all other architectures.
	(READ_MEM_BARRIER): Updated to use __kernel_dmb on arm.
	(WRITE_MEM_BARRIER): Likewise.
	(OrderAccess::fence): Updated to use FULL_MEM_BARRIER.

2009-04-23 Xerxes Rånby <xerxes@zafena.se>

	* ports/hotspot/src/share/vm/shark/sharkBuilder.cpp
	(zero_cmpxchg_int_fn): New function.
	(zero_cmpxchg_ptr_fn): Likewise.
	(SharkBuilder::init_external_functions): Use the above on arm.

2009-04-17  Lillian Angel  <langel@redhat.com>

	* Makefile.am
	(icedtea-ecj.stamp): Fixed makefile path.

2009-04-16  Lillian Angel  <langel@redhat.com>

	* HACKING: Updated.
	* Makefile.am: Updated to b16 bundle.
	(ICEDTEA_PATCHES): Removed unneeded patches 
	(icedtea.stamp): fixed build path.
	(icedtea-ecj.stamp): Likewise.
	* patches/ecj/icedtea.patch: Fixed path.
	* patches/icedtea-bytebuffer-compact.patch: Updated.
	* patches/icedtea-core-build.patch: Fixed path.
	* patches/icedtea-jdk-docs-target.patch: Fixed path.
	* patches/icedtea-shark-build.patch: Fixed path.
	* patches/icedtea-version.patch: Updated
	* patches/icedtea-display-mode-changer.patch, 
	patches/icedtea-io_util-overflow.patch,
	patches/security/icedtea-6536193.patch,
	patches/security/icedtea-6610888.patch,
	patches/security/icedtea-6610896.patch,
	patches/security/icedtea-6630639.patch,
	patches/security/icedtea-6632886.patch,
	patches/security/icedtea-6636360.patch,
	patches/security/icedtea-6652463.patch,
	patches/security/icedtea-6656633.patch,
	patches/security/icedtea-6658158.patch,
	patches/security/icedtea-6691246.patch,